fixes a layout problem in about me

--- a/src/app/about-me/about-me.component.css
+++ b/src/app/about-me/about-me.component.css
@@ -1,3 +1,7 @@
+:host {
+    flex-grow: 1;
+}
+
 .section-container {
     display: flex;
     flex-direction: row;
